force-app/main/default/objects/AI_RMF_Mapping__c/AI_RMF_Mapping__c.object-meta.xml
<CustomObject>
    <label>AI RMF Mapping</label>
    <pluralLabel>AI RMF Mappings</pluralLabel>
    <nameField>
        <displayFormat>RMF-{0000000}</displayFormat>
        <label>RMF Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>