force-app/main/default/objects/AI_RMF_Mapping__c/fields/AI_System__c.field-meta.xml
<CustomField>
    <fullName>AI_System__c</fullName>
    <label>AI System</label>
    <referenceTo>AI_System_Registry__c</referenceTo>
    <relationshipLabel>RMF Mappings</relationshipLabel>
    <relationshipName>RMF_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>