force-app/main/default/objects/AI_RMF_Mapping__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Non-Compliant</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>