force-app/main/default/objects/AI_RMF_Mapping__c/fields/RMF_Function__c.field-meta.xml
<CustomField>
    <fullName>RMF_Function__c</fullName>
    <label>RMF Function</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Govern</fullName>
            </value>
            <value>
                <fullName>Map</fullName>
            </value>
            <value>
                <fullName>Measure</fullName>
            </value>
            <value>
                <fullName>Manage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>